force-app/main/default/objects/KimbleOne__RiskAssessmentArea__c/KimbleOne__RiskAssessmentArea__c.object-meta.xml
<CustomObject>
    <label>Risk Assessment Area</label>
    <nameField>
        <label>Risk Assessment Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Assessment Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>