force-app/main/default/objects/KimbleOne__RiskAssessmentArea__c/fields/KimbleOne__RiskArea__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskArea__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Risk Area</label>
    <referenceTo>KimbleOne__RiskArea__c</referenceTo>
    <relationshipLabel>Risk Assessment Areas</relationshipLabel>
    <relationshipName>RiskAssessmentAreas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>