force-app/main/default/objects/KimbleOne__RiskAssessmentArea__c/fields/KimbleOne__RiskAssessment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskAssessment__c</fullName>
    <label>Risk Assessment</label>
    <referenceTo>KimbleOne__RiskAssessment__c</referenceTo>
    <relationshipLabel>Risk Assessment Areas</relationshipLabel>
    <relationshipName>RiskAssessmentAreas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>